fix(ChatbotContent): Fix double scroll issue for RHDH
This doesn't show in our workspace, but RHDH sees a double scrollbar on this component. Overflow: hidden fixed it in their workspace; hoping they can pull this in and see resolution.

--- a/packages/module/src/ChatbotContent/ChatbotContent.scss
+++ b/packages/module/src/ChatbotContent/ChatbotContent.scss
@@ -5,6 +5,7 @@
   position: relative;
   background-color: var(--pf-t--chatbot--background);
   overflow-y: auto;
+  overflow: hidden; // needed in Red Hat Developer Hub workspace
 }
 
 .pf-chatbot--fullscreen {
